tests/pass/Throw.java
package pass;

import java.lang.System;

public class Throw{
    public static void main(String[] args){
        if(1>2){
            throw IOException("Wrong!")
        }
    }
}