tests/fail/ShiftLeft.java
package fail;

import java.lang.System;

public class ShiftLeft{
    public static void main(System[] args){
        System.out.println('a' << 2);
    }
}